Fix visible scrollbar in firefox and other browsers

--- a/src/Containers/CryptoContainer/CryptoContainer.scss
+++ b/src/Containers/CryptoContainer/CryptoContainer.scss
@@ -3,4 +3,5 @@
   height: 70vh;
   overflow: scroll;
   padding: 10px;
+  scrollbar-width: none;
 }
